Bug 531792: [Tips] API cleanup
* Moved TipManager to internal
* Fixed all arising issues
* Added save read tips to preferences

Change-Id: Id557ab165f63ecabf87460671d1ec8e7ba5de522
Signed-off-by: Wim Jongman <wim.jongman@remainsoftware.com>